--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           to get offer</p>
       </div>
     </div>
-    <a href="#slider" class="go-down">
+    <a href="#alert" class="go-down">
       <i class="fas fa-angle-double-down fa-2x"></i>
     </a>
   </section>
