--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SHAGHR</title>
-  <link rel="icon" type="png" href="./imgs/Brown Simple Astral Project Simple Creative Logo.png">
+  <title>LICERIA & CO</title>
+  <link rel="icon" type="png" href="./imgs/logo.png">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="css/normalize.css" />
   <link rel="stylesheet" href="css/master.css" />
